# procurement_web

./: .env.example  .gitignore  LICENSE  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test_email.py  tsconfig.json  tsconfig.tests.json
.github/workflows/: daily-crawler.yml  deploy.yml  digest-dispatch.yml
.test-dist/tests/: api-digest-controls.test.js  api-otp.test.js  digests.test.js  register-tests.js  test-runtime.js
crawler/: README.md  check_db.py  pyproject.toml  test_resend.py
crawler/crawler/: __init__.py  categories.py  config.py  database.py  dedup.py  models.py  ranker.py  run_daily.py  sender.py
crawler/crawler/crawlers/: base.py  etender.py  metro.py  soe.py  university.py
crawler/logs/: .gitkeep
data/: sources.json
docs/: API_ENDPOINTS.md  API_IMPLEMENTATION_SUMMARY.md  API_TESTING_GUIDE.md  SECURITY_AND_ERROR_HANDLING.md  SUPABASE_EMAIL_TEMPLATES.md
src/: middleware.disabled.ts  middleware.ts  proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/hooks/: use-toast.ts
src/lib/: api-auth.ts  api-errors.ts  app-url.ts  authenticated-fetch.ts  cors.ts  csrf.ts  current-workspace.ts  digest-execution.ts  digest-jobs.ts  digests.ts  email.ts  plans.ts  rate-limiter.ts  roles.ts  sonner.ts  subscriptions.ts  tender-categories.ts  tender-queries.ts  utils.ts
src/types/: database.ts  supabase.ts
supabase/migrations/: 000_full_schema.sql  (+14 more)
tests/: api-digest-controls.test.ts  api-otp.test.ts  digests.test.ts  register-tests.ts  test-runtime.ts
(+79 files in other folders)
